initial4/target/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", 
                     "'!'", "'='", "':='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'.'", "':'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "RETURN", "FUNCTION", 
                      "TYPE", "STRUCT", "INTERFACE", "STRING", "INTEGER", 
                      "FLOAT", "BOOLEAN", "CONSTANT", "VARIABLE", "CONTINUE", 
                      "BREAK", "RANGE", "NIL", "TRUE", "FALSE", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "EQ", "NEQ", "LT", "GT", "LEQ", 
                      "GEQ", "AND", "OR", "NOT", "ASSIGN", "ASSIGN_VAR", 
                      "ASSIGN_ADD", "ASSIGN_SUB", "ASSIGN_MUL", "ASSIGN_DIV", 
                      "ASSIGN_MOD", "DOT", "COLON", "LP", "RP", "SLP", "SRP", 
                      "CLP", "CRP", "COMMA", "SEMICOLON", "ID", "INT_LIT", 
                      "FLOAT_LIT", "BIN", "OCT", "HEX", "STRING_LIT", "NEWLINE", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declared = 1
    RULE_function_declared = 2
    RULE_variables_declared = 3
    RULE_inferred_var = 4
    RULE_struct_variable_declared = 5
    RULE_keyword_type_var = 6
    RULE_list_number_lit = 7
    RULE_type_key = 8
    RULE_type_key_variable = 9
    RULE_constants_declared = 10
    RULE_function = 11
    RULE_struct_declared = 12
    RULE_struct_variable_list = 13
    RULE_struct_variable_list_recur = 14
    RULE_method_declared = 15
    RULE_list_parameters = 16
    RULE_parameter = 17
    RULE_parameter_type = 18
    RULE_list_ID = 19
    RULE_interface_declared = 20
    RULE_list_para_interface = 21
    RULE_literal = 22
    RULE_expression = 23
    RULE_expression1 = 24
    RULE_expression2 = 25
    RULE_expression3 = 26
    RULE_expression4 = 27
    RULE_expression5 = 28
    RULE_expression6 = 29
    RULE_expression7 = 30
    RULE_array_literal = 31
    RULE_array_element_set = 32
    RULE_array_literal_declare = 33
    RULE_array_elements = 34
    RULE_valid_element = 35
    RULE_dimensions = 36
    RULE_cell_type = 37
    RULE_type_literal = 38
    RULE_type_literal_except_struct = 39
    RULE_struct_literal = 40
    RULE_struct_literal_recur = 41
    RULE_index_operators = 42
    RULE_index_operators_recur = 43
    RULE_argument_list = 44
    RULE_argument_list_recur = 45
    RULE_for_step = 46
    RULE_for_each = 47
    RULE_for_basic = 48
    RULE_variables_declared_for = 49
    RULE_list_statement = 50
    RULE_list_statement_recur = 51
    RULE_statement = 52
    RULE_list_statement_in_function = 53
    RULE_list_statement_in_function_recur = 54
    RULE_statement_in_function = 55
    RULE_declared_statement = 56
    RULE_declared_statement_no_ignore = 57
    RULE_constants_declared_in_function = 58
    RULE_assign_statement = 59
    RULE_assign_statement_for = 60
    RULE_lhs = 61
    RULE_if_statement = 62
    RULE_elif_statement = 63
    RULE_else_statement = 64
    RULE_for_statement = 65
    RULE_break_statement = 66
    RULE_continue_statement = 67
    RULE_call_statement = 68
    RULE_function_call = 69
    RULE_return_statement = 70
    RULE_ignore = 71

    ruleNames =  [ "program", "declared", "function_declared", "variables_declared", 
                   "inferred_var", "struct_variable_declared", "keyword_type_var", 
                   "list_number_lit", "type_key", "type_key_variable", "constants_declared", 
                   "function", "struct_declared", "struct_variable_list", 
                   "struct_variable_list_recur", "method_declared", "list_parameters", 
                   "parameter", "parameter_type", "list_ID", "interface_declared", 
                   "list_para_interface", "literal", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "expression7", "array_literal", "array_element_set", 
                   "array_literal_declare", "array_elements", "valid_element", 
                   "dimensions", "cell_type", "type_literal", "type_literal_except_struct", 
                   "struct_literal", "struct_literal_recur", "index_operators", 
                   "index_operators_recur", "argument_list", "argument_list_recur", 
                   "for_step", "for_each", "for_basic", "variables_declared_for", 
                   "list_statement", "list_statement_recur", "statement", 
                   "list_statement_in_function", "list_statement_in_function_recur", 
                   "statement_in_function", "declared_statement", "declared_statement_no_ignore", 
                   "constants_declared_in_function", "assign_statement", 
                   "assign_statement_for", "lhs", "if_statement", "elif_statement", 
                   "else_statement", "for_statement", "break_statement", 
                   "continue_statement", "call_statement", "function_call", 
                   "return_statement", "ignore" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    RETURN=4
    FUNCTION=5
    TYPE=6
    STRUCT=7
    INTERFACE=8
    STRING=9
    INTEGER=10
    FLOAT=11
    BOOLEAN=12
    CONSTANT=13
    VARIABLE=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    NIL=18
    TRUE=19
    FALSE=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    MOD=25
    EQ=26
    NEQ=27
    LT=28
    GT=29
    LEQ=30
    GEQ=31
    AND=32
    OR=33
    NOT=34
    ASSIGN=35
    ASSIGN_VAR=36
    ASSIGN_ADD=37
    ASSIGN_SUB=38
    ASSIGN_MUL=39
    ASSIGN_DIV=40
    ASSIGN_MOD=41
    DOT=42
    COLON=43
    LP=44
    RP=45
    SLP=46
    SRP=47
    CLP=48
    CRP=49
    COMMA=50
    SEMICOLON=51
    ID=52
    INT_LIT=53
    FLOAT_LIT=54
    BIN=55
    OCT=56
    HEX=57
    STRING_LIT=58
    NEWLINE=59
    LINE_COMMENT=60
    BLOCK_COMMENT=61
    WS=62
    ERROR_CHAR=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.NEWLINE)
            else:
                return self.getToken(MiniGoParser.NEWLINE, i)

        def declared(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclaredContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclaredContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniGoParser.NEWLINE:
                self.state = 144
                self.match(MiniGoParser.NEWLINE)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 150
                self.declared()
                self.state = 153 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.FUNCTION) | (1 << MiniGoParser.TYPE) | (1 << MiniGoParser.CONSTANT) | (1 << MiniGoParser.VARIABLE))) != 0)):
                    break

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniGoParser.NEWLINE:
                self.state = 155
                self.match(MiniGoParser.NEWLINE)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Variables_declaredContext,0)


        def constants_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Constants_declaredContext,0)


        def function_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Function_declaredContext,0)


        def method_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declaredContext,0)


        def struct_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declaredContext,0)


        def interface_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declaredContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declared

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclared" ):
                return visitor.visitDeclared(self)
            else:
                return visitor.visitChildren(self)




    def declared(self):

        localctx = MiniGoParser.DeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declared)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.variables_declared()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.constants_declared()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.function_declared()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.method_declared()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.struct_declared()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 168
                self.interface_declared()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MiniGoParser.FunctionContext,0)


        def variables_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Variables_declaredContext,0)


        def ignore(self):
            return self.getTypedRuleContext(MiniGoParser.IgnoreContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_function_declared

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declared" ):
                return visitor.visitFunction_declared(self)
            else:
                return visitor.visitChildren(self)




    def function_declared(self):

        localctx = MiniGoParser.Function_declaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declared)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.function()
                pass
            elif token in [MiniGoParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.variables_declared()
                self.state = 173
                self.ignore()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variables_declaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def inferred_var(self):
            return self.getTypedRuleContext(MiniGoParser.Inferred_varContext,0)


        def keyword_type_var(self):
            return self.getTypedRuleContext(MiniGoParser.Keyword_type_varContext,0)


        def struct_variable_declared(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_variable_declaredContext,0)


        def ignore(self):
            return self.getTypedRuleContext(MiniGoParser.IgnoreContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_variables_declared

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables_declared" ):
                return visitor.visitVariables_declared(self)
            else:
                return visitor.visitChildren(self)




    def variables_declared(self):

        localctx = MiniGoParser.Variables_declaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables_declared)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 177
                self.inferred_var()
                pass

            elif la_ == 2:
                self.state = 178
                self.keyword_type_var()
                pass

            elif la_ == 3:
                self.state = 179
                self.struct_variable_declared()
                pass


            self.state = 182
            self.match(MiniGoParser.SEMICOLON)
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 183
                self.ignore()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inferred_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MiniGoParser.VARIABLE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def type_key_variable(self):
            return self.getTypedRuleContext(MiniGoParser.Type_key_variableContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_inferred_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInferred_var" ):
                return visitor.visitInferred_var(self)
            else:
                return visitor.visitChildren(self)




    def inferred_var(self):

        localctx = MiniGoParser.Inferred_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inferred_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(MiniGoParser.VARIABLE)
            self.state = 187
            self.match(MiniGoParser.ID)
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.STRING, MiniGoParser.INTEGER, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN]:
                self.state = 188
                self.type_key_variable()
                pass
            elif token in [MiniGoParser.SLP]:
                self.state = 189
                self.array_literal()
                pass
            elif token in [MiniGoParser.ASSIGN]:
                pass
            else:
                pass
            self.state = 192
            self.match(MiniGoParser.ASSIGN)
            self.state = 193
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_variable_declaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MiniGoParser.VARIABLE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_variable_declared

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_variable_declared" ):
                return visitor.visitStruct_variable_declared(self)
            else:
                return visitor.visitChildren(self)




    def struct_variable_declared(self):

        localctx = MiniGoParser.Struct_variable_declaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_struct_variable_declared)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(MiniGoParser.VARIABLE)
            self.state = 196
            self.match(MiniGoParser.ID)
            self.state = 197
            self.match(MiniGoParser.ID)
            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniGoParser.ASSIGN:
                self.state = 198
                self.match(MiniGoParser.ASSIGN)
                self.state = 199
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_type_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MiniGoParser.VARIABLE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def type_key_variable(self):
            return self.getTypedRuleContext(MiniGoParser.Type_key_variableContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_keyword_type_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_type_var" ):
                return visitor.visitKeyword_type_var(self)
            else:
                return visitor.visitChildren(self)




    def keyword_type_var(self):

        localctx = MiniGoParser.Keyword_type_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_keyword_type_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(MiniGoParser.VARIABLE)
            self.state = 203
            self.match(MiniGoParser.ID)
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.STRING, MiniGoParser.INTEGER, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN]:
                self.state = 204
                self.type_key_variable()
                pass
            elif token in [MiniGoParser.SLP]:
                self.state = 205
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 210
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniGoParser.ASSIGN:
                self.state = 208
                self.match(MiniGoParser.ASSIGN)
                self.state = 209
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_number_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def COMMA(self):
            return self.getToken(MiniGoParser.COMMA, 0)

        def list_number_lit(self):
            return self.getTypedRuleContext(MiniGoParser.List_number_litContext,0)


        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_list_number_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_number_lit" ):
                return visitor.visitList_number_lit(self)
            else:
                return visitor.visitChildren(self)




    def list_number_lit(self):

        localctx = MiniGoParser.List_number_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_number_lit)
        try:
            self.state = 220
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.match(MiniGoParser.INT_LIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
